overflow fixed

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,6 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-    overflow: hidden;
 }
 
 body {
@@ -19,7 +18,7 @@ body {
 .menu {
 	position: absolute;
 	top: 0;
-	padding: 20px;
+	padding: 50px;
 	width: 100%;
 	height: 100%;
 	background-color: rgb(247, 249, 251);
@@ -36,12 +35,12 @@ body {
 	color: #414040;
 	font-weight: 400;
 	font-size: 30px;
-    height: 10%;
+	height: 10%;
 }
 
 .underline {
 	width: 60px;
-	height: 10px;
+	height: 30px;
 	background-color: #039dff;
 	border-radius: 10px;
 	margin: 2px 0 5px;
@@ -70,8 +69,6 @@ body {
 	border-radius: 30px;
 }
 
-
-
 .questions__question,
 .questions__answer {
 	display: flex;
@@ -82,7 +79,8 @@ body {
 	padding: 10%;
 	margin: 30px;
 	border-radius: 30px;
-	font-size: 25px;
+	font-size: 22px;
+	font-weight: 500;
 	border: 2px solid white;
 }
 
@@ -98,7 +96,7 @@ body {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	padding: 80px 20px;
+	padding: 80px 30px;
 	top: 200%;
 	left: 50%;
 	color: black;
@@ -112,28 +110,27 @@ body {
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-evenly;
-	top: 20%;
+	top: 10%;
 	margin: auto;
 	.buttons__next,
 	.buttons__prev {
 		color: white;
 		background-color: #3a3939;
-		width: 150px;
-		height: 100px;
+		width: 120px;
+		height: 80px;
 
 		border-radius: 20px;
 		font-size: 30px;
 	}
 }
 
-
-.home{
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    background-color: #3a3939;
-    color: white;
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
+.home {
+	position: absolute;
+	top: 50px;
+	left: 20px;
+	background-color: #3a3939;
+	color: white;
+	width: 50px;
+	height: 50px;
+	border-radius: 50px;
 }
